--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -1,127 +1,44 @@
-name: Terraform CI/CD
+name: CI/CD
 
 on:
   push:
     branches:
-      - main
-      - dev
-  pull_request:
-    branches:
-      - main
-      - dev
-
-permissions:
-  id-token: write
-  contents: read
-  pull-requests: write
+      - test
 
 jobs:
-  terraform-plan-apply:
-    name: 'Terraform Format & Validate & Plan & Apply'
+  build-and-push:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        environment: [dev, prod]
-
     steps:
-
-    - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-
-    - name: Checkout
-      uses: actions/checkout@v3
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+    - uses: actions/checkout@v2
+    - name: Log in to Azure Container Registry
+      uses: azure/docker-login@v1
       with:
-        terraform_wrapper: false
-
-    - name: Set Environment Secrets
+        login-server: fastapiacrtest.azurecr.io
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+    - name: Build and push Docker image
       run: |
-        if [ "${{ matrix.environment }}" == 'dev' ]; then
-          export ARM_CLIENT_ID=${{ secrets.AZURE_CLIENT_ID }}
-          export ARM_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          export ARM_TENANT_ID=${{ secrets.AZURE_TENANT_ID }}
-          export AUTO_APPROVE_FLAG="-auto-approve"
-        else
-          export ARM_CLIENT_ID=${{ secrets.PROD_AZURE_CLIENT_ID }}
-          export ARM_SUBSCRIPTION_ID=${{ secrets.PROD_AZURE_SUBSCRIPTION_ID }}
-          export ARM_TENANT_ID=${{ secrets.PROD_AZURE_TENANT_ID }}
-          export AUTO_APPROVE_FLAG=""
-        fi
+        docker build . -t fastapiacrtest.azurecr.io/fastapi-app:${{ github.sha }}
+        docker push fastapiacrtest.azurecr.io/fastapi-app:${{ github.sha }}
 
-    - name: Debug Environment
+  deploy:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install Helm
       run: |
-        echo "ARM_CLIENT_ID: $ARM_CLIENT_ID"
-        echo "ARM_SUBSCRIPTION_ID: $ARM_SUBSCRIPTION_ID"
-        echo "ARM_TENANT_ID: $ARM_TENANT_ID"
-        echo "AUTO_APPROVE_FLAG: $AUTO_APPROVE_FLAG"
-
-    - name: OIDC Login to Azure Public Cloud
-      uses: azure/login@v1
+        curl https://baltocdn.com/helm/signing.asc | sudo apt-key add -
+        sudo apt-get install apt-transport-https --yes
+        echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        sudo apt-get update
+        sudo apt-get install helm
+    - name: Set up Kubeconfig
+      uses: azure/aks-set-context@v1
       with:
-        client-id: ${{ env.ARM_CLIENT_ID }}
-        tenant-id: ${{ env.ARM_TENANT_ID }}
-        subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
-
-    - name: Terraform Init with Backend Config
-      run: terraform init -backend-config=./environments/${{ matrix.environment }}/backend.tfvars
-
-    - name: Terraform Format
-      run: terraform fmt -check
-
-    - name: Terraform Validate
-      run: terraform validate
-
-    - name: Terraform Plan
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        cluster-name: yourClusterName
+        resource-group: yourResourceGroupName
+    - name: Deploy to AKS
       run: |
-        terraform plan -out=tfplan -var-file=./environments/${{ matrix.environment }}/terraform.tfvars
-
-    - name: Publish Terraform Plan
-      id: tf-plan
-      run: |
-        export exitcode=0
-        terraform plan -detailed-exitcode -no-color -out=tfplan -var-file=./environments/${{ matrix.environment }}/terraform.tfvars || export exitcode=$?
-        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
-        if [ $exitcode -eq 1 ]; then
-          echo "Terraform Plan Failed!"
-          exit 1
-        fi
-
-    - name: Publish Terraform Plan
-      uses: actions/upload-artifact@v3
-      with:
-        name: tfplan
-        path: tfplan
-
-    - name: Create String Output of Terraform Plan
-      id: tf-plan-string
-      run: |
-        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
-        delimiter="$(openssl rand -hex 8)"
-        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-        echo '```terraform' >> $GITHUB_OUTPUT
-        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-        echo '```' >> $GITHUB_OUTPUT
-        echo "</details>" >> $GITHUB_OUTPUT
-        echo "${delimiter}" >> $GITHUB_OUTPUT
-
-    - name: Publish Terraform Plan to Task Summary
-      if: ${{ steps.tf-plan.outputs.exitcode }} == '2'
-      env:
-        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-      run: |
-        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
-
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && matrix.environment == 'prod'
-      run: terraform apply tfplan
-
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && matrix.environment == 'dev'
-      run: terraform apply $AUTO_APPROVE_FLAG tfplan
+        helm upgrade --install fastapi-app ./charts/fastapi-app --set image.tag=${{ github.sha }}
