--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -33,12 +33,22 @@ jobs:
         echo "deb https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
         sudo apt-get update
         sudo apt-get install helm
-    - name: Set up Kubeconfig
-      uses: azure/aks-set-context@v1
+        
+    - name: Login to Azure CLI
+      uses: azure/login@v1
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-        cluster-name: 'fast-api'
-        resource-group: 'terraform-test'
+        client-id: ${{ secrets.ARM_CLIENT_ID }}
+        tenant-id: ${{ secrets.ARM_TENANT_ID }}
+        subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+  
+    - name: Set up Kubeconfig
+      run: |
+        az aks get-credentials --name fast-api --resource-group terraform-test --overwrite-existing
+      env:
+        ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+        
     - name: Deploy to AKS
       run: |
         helm upgrade --install fastapi-app ./charts/fastapi-app --set image.tag=${{ github.sha }}
