--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -53,7 +53,17 @@ jobs:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
+    - name: Create Image Pull Secret
+      run: |
+        kubectl create secret docker-registry acr-secret \
+          --docker-server=fastapiacrtest.azurecr.io \
+          --docker-username=${{ secrets.ACR_USERNAME }} \
+          --docker-password=${{ secrets.ACR_PASSWORD }} \
+          --docker-email=your-email@example.com \
+          --namespace=default \
+          --dry-run=client -o yaml | kubectl apply -f -
         
     - name: Deploy to AKS
       run: |
-        helm upgrade --install fastapi-app ./charts/fastapi-app --set image.tag=${{ github.sha }}
+        helm upgrade --install fastapi-app ./charts/fastapi-app --set image.tag=${{ github.sha }} --set image.pullSecrets[0].name=acr-secret
