--- a/charts/fastapi-app/templates/deployment.yaml
+++ b/charts/fastapi-app/templates/deployment.yaml
@@ -38,12 +38,16 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.container.port }}
+              containerPort: 8000
               protocol: TCP
-          livenessProbe:
-            {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
-            {{- toYaml .Values.readinessProbe | nindent 12 }}
+             httpGet:
+               path: /health
+               port: 8000
+          livenessProbe:
+             httpGet:
+               path: /health
+               port: 8000
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
