--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -18,13 +18,13 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
-        login-server: fastapiacrtest.azurecr.io
+        login-server: ${{ secrets.ACR_SERVER }}
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
     - name: Build and push Docker image
       run: |
-        docker build . -t fastapiacrtest.azurecr.io/fastapi-app:${{ github.sha }}
-        docker push fastapiacrtest.azurecr.io/fastapi-app:${{ github.sha }}
+        docker build . -t ${{ secrets.ACR_SERVER }}/fastapi-app:${{ github.sha }}
+        docker push ${{ secrets.ACR_SERVER }}/fastapi-app:${{ github.sha }}
 
   deploy:
     needs: build-and-push
@@ -57,10 +57,9 @@ jobs:
     - name: Create Image Pull Secret
       run: |
         kubectl create secret docker-registry acr-secret \
-          --docker-server=fastapiacrtest.azurecr.io \
+          --docker-server=${{ secrets.ACR_SERVER }} \
           --docker-username=${{ secrets.ACR_USERNAME }} \
           --docker-password=${{ secrets.ACR_PASSWORD }} \
-          --docker-email=your-email@example.com \
           --namespace=default \
           --dry-run=client -o yaml | kubectl apply -f -
         
