--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -38,10 +38,10 @@ jobs:
       run: curl http://localhost:8000/health
 
     - name: Run PyTest
-      run: docker exec api_app pytest /app/tests
+      run: docker exec api-app pytest /app/tests
 
     - name: Stop Docker container
-      run: docker stop api_app
+      run: docker stop api-app
 
     - name: push Docker image
       run: |
