--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -14,7 +14,7 @@ jobs:
   build-and-push:
     runs-on: 
         - mac-os
-        - self-hosted
+        - test-runner
     steps:
     - uses: actions/checkout@v2
     - name: Log in to Azure Container Registry
