--- a/.github/workflows/deploy_infrastructure.yaml
+++ b/.github/workflows/deploy_infrastructure.yaml
@@ -12,9 +12,8 @@ permissions:
 
 jobs:
   build-and-push:
-    runs-on: 
-        - mac-os
-        - test-runner
+    runs-on: test-runner
+    
     steps:
     - uses: actions/checkout@v2
     - name: Log in to Azure Container Registry
